Feat/issue 470 attributes (#29)
* add attributes

* fix test cases

* add metadata

* add metadata to list

* optimize uses

* remove user attribute foreign key

* execute psalm before phpunit
