# src/Table/Generated/RoutesTable.php
@@ -15,13 +15,14 @@ class RoutesTable extends \PSX\Sql\TableAbstract
     public const COLUMN_METHODS = 'methods';
     public const COLUMN_PATH = 'path';
     public const COLUMN_CONTROLLER = 'controller';
+    public const COLUMN_METADATA = 'metadata';
     public function getName() : string
     {
         return self::NAME;
     }
     public function getColumns() : array
     {
-        return array(self::COLUMN_ID => 0x3020000a, self::COLUMN_CATEGORY_ID => 0x20000a, self::COLUMN_STATUS => 0x20000a, self::COLUMN_PRIORITY => 0x4020000a, self::COLUMN_METHODS => 0xa00040, self::COLUMN_PATH => 0xa000ff, self::COLUMN_CONTROLLER => 0xa000ff);
+        return array(self::COLUMN_ID => 0x3020000a, self::COLUMN_CATEGORY_ID => 0x20000a, self::COLUMN_STATUS => 0x20000a, self::COLUMN_PRIORITY => 0x4020000a, self::COLUMN_METHODS => 0xa00040, self::COLUMN_PATH => 0xa000ff, self::COLUMN_CONTROLLER => 0xa000ff, self::COLUMN_METADATA => 0x40b00000);
     }
     /**
      * @return array<\Fusio\Impl\Table\Generated\RoutesRow>
@@ -186,6 +187,25 @@ class RoutesTable extends \PSX\Sql\TableAbstract
     {
         $condition = new \PSX\Sql\Condition();
         $condition->like('controller', $value);
+        return $this->doFindOneBy($condition);
+    }
+    /**
+     * @return array<\Fusio\Impl\Table\Generated\RoutesRow>
+     * @throws \PSX\Sql\Exception\QueryException
+     */
+    public function findByMetadata(string $value, ?int $startIndex = null, ?int $count = null, ?string $sortBy = null, ?int $sortOrder = null) : array
+    {
+        $condition = new \PSX\Sql\Condition();
+        $condition->like('metadata', $value);
+        return $this->doFindBy($condition, $startIndex, $count, $sortBy, $sortOrder);
+    }
+    /**
+     * @throws \PSX\Sql\Exception\QueryException
+     */
+    public function findOneByMetadata(string $value) : ?\Fusio\Impl\Table\Generated\RoutesRow
+    {
+        $condition = new \PSX\Sql\Condition();
+        $condition->like('metadata', $value);
         return $this->doFindOneBy($condition);
     }
     /**
